Fix horizontal overflow

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -55,7 +55,7 @@ button:active {
 
 input[type=checkbox] {
   position: absolute;
-  opacity: 0;
+  left: -999px;
 }
 
 input[type=checkbox] + span {
